--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
-  }
+    },
+    "jsx": "react",
+    "module": "commonjs",
+    "target": "es6"
+  },
+  "exclude": ["node_modules", ".next", "out"],
+  "include": ["src/**/*"]
 }
