--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "postcss": "^8.4.31",
+    "jszip": "^3.10.1"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
